--- a/project/templates/barcode.html
+++ b/project/templates/barcode.html
@@ -1,13 +1,8 @@
-{% extends "base.html" %}
-
-{% block headscript %}
-<meta http-equiv="refresh" content="10">
-{% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% block headscript %}
+<meta http-equiv="refresh" content="10" />
+{% endblock %} {% block content %}
 <table class="table">
-  <thead>
-  </thead>
+  <thead></thead>
   <tbody>
     <tr>
       <td></td>
@@ -27,18 +22,23 @@
             <tr>
               <td>
                 {% if queue_item.status == 'P' %}
-                <img src="{{ url_for('static', filename='images/icon-play.png') }}" height="24" width="24">
-                {% else %}
-                {{ queue_item.order }}
-                {% endif %}
+                <img
+                  src="{{ url_for('static', filename='images/icon-play.png') }}"
+                  height="24"
+                  width="24"
+                />
+                {% else %} {{ queue_item.order }} {% endif %}
               </td>
-              <td>{{ queue_item.singer }}
-              </td>
+              <td>{{ queue_item.singer }}</td>
               <td>{{ queue_item.song }}</td>
               <td>{{ queue_item.artist }}</td>
               <td>
                 {% if queue_item.status == 'D' %}
-                <img src="{{ url_for('static', filename='images/icon-download.png') }}" height="24" width="24">
+                <img
+                  src="{{ url_for('static', filename='images/icon-download.png') }}"
+                  height="24"
+                  width="24"
+                />
                 {% endif %}
               </td>
             </tr>
@@ -47,13 +47,24 @@
         </table>
       </td>
       <td align="center">
-        <div class="login-container">
-          <a align="center">{{ _('HOST') }}</a><br>
-          <img id="login-qrcode" src="data:image/png;base64,{{ login_img }}" width="250" height="250">
-        </div><br><br><br>
         <div class="signup-container">
-          <a align="center">{{ _('ROOM') }}</a><br>
-          <img id="signup-qrcode" src="data:image/png;base64,{{ signup_img }}" width="250" height="250">
+          <a align="center">{{ _('ROOM') }}</a><br />
+          <img
+            id="signup-qrcode"
+            src="data:image/png;base64,{{ signup_img }}"
+            width="250"
+            height="250"
+          />
+        </div>
+        <br /><br /><br />
+        <div class="login-container">
+          <a align="center">{{ _('HOST') }}</a><br />
+          <img
+            id="login-qrcode"
+            src="data:image/png;base64,{{ login_img }}"
+            width="250"
+            height="250"
+          />
         </div>
       </td>
     </tr>
