--- a/project/templates/musics.html
+++ b/project/templates/musics.html
@@ -17,7 +17,7 @@
         </div>
         <br>
         <div class="input-group">
-            <input type="text" class="form-control" id="search_string" placeholder="Artist - Music" name="search_string"
+            <input type="text" class="form-control" id="search_string" placeholder={{ _('Artist - Music') }} name="search_string"
                 required>
             <button type="submit" class="btn btn-outline-primary">{{ _('Search Youtube') }}</button>
         </div>
