--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -13,8 +13,13 @@
     {% block css %}{% endblock %}
 </head>
 
+{% if current_user.theme == 'light' %}
+<body data-bs-theme="light">
+    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+{% else %}
 <body data-bs-theme="dark">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+{% endif %}
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('main.index') }}">
                 <img src="{{  url_for('static', filename='images/karatube_logo1.jpg') }}" alt="Avatar Logo"
